--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,10 +3,7 @@
     <%= link_to spaces_path, class:"navbar-brand" do %>
     <%= image_tag("spaces.png", height: '200', width: '200') %>
     <% end %>
-    <%# <div class="pointer-events-none row position-absolute w-full md:justify-center"> %>
       <div class="col-8 col-lg-3">
-        <%# <input class="pointer-events-auto w-100 text-center p-2 border border-gray-300 text-gray-900 rounded-pill placeholder-gray-900"
-        type="search" placeholder="Search for spaces"> %>
         <%= form_with url: spaces_path, method: :get, class: "d-flex" do %>
           <%= text_field_tag :query,
             params[:query],
@@ -16,23 +13,15 @@
           <%= submit_tag "Search", class: "btn btn-primary" %>
         <% end %>
       </div>
-    <%# </div> %>
-    <div>
-      <%= link_to "List your space", new_space_path, class:"nav-link d-flex" %>
-      <%= link_to "My bookings", my_bookings_path, class:"nav-link"  %>
+    <div class="d-flex flex-column">
+      <ul class=“navbar-nav me-auto”>
       <% if user_signed_in? %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
           <li class="nav-item dropdown">
             <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Action", "#", class: "dropdown-item" %>
-              <%= link_to "Another action", "#", class: "dropdown-item" %>
               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
+              <%= link_to "List your space", new_space_path, class:"dropdown-item" %>
+              <%= link_to "My bookings", my_bookings_path, class:"dropdown-item"  %>
             </div>
           </li>
         <% else %>
@@ -40,6 +29,7 @@
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
+    </ul>
     </div>
   </div>
 </div>
